[gd_scene load_steps=6 format=3 uid="uid://o110sg6yyf2"]

[ext_resource type="Script" uid="uid://cryrxg24puwh6" path="res://game_hud/hud_court.gd" id="1_gfo72"]
[ext_resource type="Texture2D" uid="uid://ca121ix0tltot" path="res://game_assets/images/_system/menu_bg.png" id="2_x6jf3"]
[ext_resource type="FontFile" uid="uid://bfywc4sd8ks73" path="res://game_assets/fonts/motion-control.bolditalic.otf" id="3_gyo8y"]
[ext_resource type="Theme" uid="uid://bt11ooea31t6o" path="res://themes/basic_button.tres" id="4_vmmdo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ck582"]
texture = ExtResource("2_x6jf3")

[node name="HUD_Court" type="Control"]
custom_minimum_size = Vector2(1080, 1920)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -540.0
offset_right = 540.0
offset_bottom = 1920.0
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_gfo72")

[node name="MenuBackgound" type="Panel" parent="."]
custom_minimum_size = Vector2(1080, 1920)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -540.0
offset_right = 540.0
offset_bottom = 1920.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ck582")

[node name="OptionsTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -410.0
offset_top = 100.0
offset_right = 410.0
offset_bottom = 174.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_constants/shadow_offset_x = -10
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 25
theme_override_fonts/font = ExtResource("3_gyo8y")
theme_override_font_sizes/font_size = 100
text = "selecciona juego"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_close" type="Button" parent="."]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -420.0
offset_right = 350.0
offset_bottom = -270.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_vmmdo")
text = "cerrar"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.243
anchor_top = 0.176
anchor_right = 0.731
anchor_bottom = 0.762
offset_left = 27.56
offset_top = 255.08
offset_right = 0.52002
offset_bottom = 0.959961
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Grid" type="GridContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MC1" type="MarginContainer" parent="ScrollContainer/MarginContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="btn_mode_1" type="Button" parent="ScrollContainer/MarginContainer/Grid/MC1"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("4_vmmdo")
text = "fooSnek"

[node name="MC2" type="MarginContainer" parent="ScrollContainer/MarginContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="btn_mode_2" type="Button" parent="ScrollContainer/MarginContainer/Grid/MC2"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
mouse_force_pass_scroll_events = false
theme = ExtResource("4_vmmdo")
disabled = true
text = "Mexico 2026"

[node name="MC3" type="MarginContainer" parent="ScrollContainer/MarginContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="btn_mode_3" type="Button" parent="ScrollContainer/MarginContainer/Grid/MC3"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_force_pass_scroll_events = false
theme = ExtResource("4_vmmdo")
disabled = true
text = "Playa"
